tests/compile/userdata_mut_slice_arg.stderr
error: this reference type is not supported as a callback parameter
 --> tests/compile/userdata_mut_slice_arg.rs:7:27
  |
7 |     fn first(&self, data: &mut [u8]) -> mlua::Result<u8> {
  |                           ^^^^^^^^^
